# VideoGS_SIBR_viewers_VR

./: .gitignore  README.md
cmake/linux/: dependencies.cmake
src/core/assets/: CameraRecorder.cpp
src/core/graphics/: Camera.cpp  Camera.hpp  GUI.hpp
src/core/openxr/: CMakeLists.txt  OpenXRHMD.cpp  OpenXRHMD.hpp  OpenXRHelper.hpp  OpenXRInput.cpp  OpenXRInput.hpp  OpenXRInputType.h  OpenXRRdrMode.cpp  OpenXRRdrMode.hpp  VRConfiguration.cpp  VRConfiguration.hpp
src/core/openxr/interactionprofiles/: HTCViveControllerProfile.cpp  HTCViveControllerProfile.hpp  IInteractionProfile.hpp  KhronosSimpleControllerProfile.cpp  KhronosSimpleControllerProfile.hpp  OculusTouchControllerProfile.cpp  OculusTouchControllerProfile.hpp  ValveIndexControllerProfile.cpp  ValveIndexControllerProfile.hpp
src/core/system/: Matrix.cpp  Utils.cpp
src/core/video/: FFmpegVideoEncoder.cpp  VideoUtils.hpp
src/core/view/: ICameraHandler.hpp  InteractiveCameraHandler.cpp  InteractiveCameraHandler.hpp  MultiViewManager.cpp  RenderingMode.hpp
src/projects/gaussianviewer/apps/gaussianViewer/: main.cpp
src/projects/gaussianviewer/renderer/: CMakeLists.txt  Config.hpp  GaussianView.cpp  GaussianView.hpp  OpenCVVideoDecoder.hpp  kernels.cu  kernels.hpp
